[package]
name = "dioxus-05-callbacks"
version = "0.1.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2021"


[dependencies]
serde = { version = "1.0.210", features = ["derive"] }

dioxus = { version = "0.5.6", features = ["fullstack", "router"] }

log = { version = "0.4.22" }
simple_logger = { version = "5.0.0" }
console_log = { version = "1.0.0"}

##########
[features]
##########

default = []

server = [
    "dioxus/axum",
]

web = [
    "dioxus/web",
]
