[package]
name = "dioxus-05-context"
version = "0.1.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2021"


##############
[dependencies]
##############

dioxus = { version = "0.5", features = ["fullstack", "router"] }

console_log = { version = "1.0.0", optional = true }
log = { version = "0.4.21", optional = true }

serde = { version = "1.0.197", features = ["derive"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"


##########
[features]
##########

default = []
server = [
    "dioxus/axum",
    "log", "console_log"
]
web = [
    "dioxus/web",
    "log", "console_log"
]
