[package]
name = "dioxus_06_fullstack_hotdog"
version = "0.1.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2021"

##############
[dependencies]
##############

dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dioxus-cli-config = { version = "0.6.1", optional = true }
axum = { version = "0.7.4", optional = true }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"], optional = true }
sqlx = { version = "0.7.4", features = [
    "macros",
    "migrate",
    "postgres",
    "_unstable-all-types",
    "tls-rustls",
    "runtime-tokio",
], optional = true }
thiserror = { version = "2.0.11" }
anyhow = "1.0.95"
log = { version = "0.4.22", optional = true }
simple_logger = { version = "5.0.0", optional = true }
console_log = { version = "1.0.0", optional = true }
dotenvy = { version = "0.15.7", optional = true }

##########
[features]
##########

default = []
web = ["dioxus/web" ]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [ 
    "dioxus/server", 
    "dep:tokio", "dep:axum", "dep:dioxus-cli-config", 
    "sqlx",
    "dep:log", "dep:console_log", "dep:simple_logger", "dep:dotenvy" ]

#########
[profile]
#########

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
