[package]
name = "dioxus_07_hotdog"
version = "0.1.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.7.2", features = [ "fullstack", "router" ] }
reqwest = { version = "0.12.24", features = [ "json" ] }
serde = { version = "1.0.228", features = [ "derive" ] }

rusqlite = { version = "0.37.0", optional = true }

[features]
default = [ "web" ]
web = [ "dioxus/web" ]
desktop = [ "dioxus/desktop" ]
mobile = [ "dioxus/mobile" ]
server = [ "dioxus/server", "dep:rusqlite" ]
