[package]
name = "dioxus_07_light_dark_themes"
version = "0.1.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2021"


[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack"] }
web-sys = { version = "0.3.83", features = [
    # "Window, Document", 
    "Element", "DomTokenList"
] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
