[package]

name = "dioxus_axum_auth_pgdb"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]

dioxus-web = { version = "0.5.1", features = ["hydrate"], optional = true }
dioxus = { version = "0.5.1", features = [ "fullstack", "router" ] }
dioxus-fullstack = { version = "0.5.2" }

axum = { version = "0.7.5", optional = true }
axum_session = { version = "0.14.0", optional = true }
axum_session_auth = { version = "0.14.0", optional = true }
axum_session_sqlx = { version = "0.1.0", features = [ "postgres", "tls-rustls" ], optional = true }

tokio = { version = "1.37.0", features = ["full"], optional = true }
tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5.2", features = ["auth"], optional = true }
http = { version = "1.0.0", optional = true }

log = { version = "0.4.21", optional = true }
simple_logger = { version = "4.2.0", optional = true }

async-trait = { version = "0.1.71", optional = true }
sqlx = { version = "0.7.0", features = [
    "macros",
    "migrate",
    "postgres",
    "_unstable-all-types",
    "tls-rustls",
    "runtime-tokio",
], optional = true }

serde = "1.0.159"
execute = "0.2.12"
anyhow = "1.0.71"


[features]

default = []
server = [ "dioxus-fullstack/axum", "axum", "axum_session", "axum_session_auth", "axum_session_sqlx",
           "tokio", "http", "tower", "tower-http",
           "async-trait", "sqlx",
           "log", "simple_logger"
]
web = [ "dioxus-web" ]
