[package]
name = "tmc-fsrs"
version = "0.1.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2021"


[dependencies]

dioxus = { version = "0.5", features = ["fullstack", "router"] }
dioxus-web = { version = "0.5.1", features = ["hydrate"], optional = true }
dioxus-fullstack = { version = "0.5.2" }

axum = { version = "0.7.5", optional = true }

tokio = { version = "1.37.0", features = ["full"], optional = true }

serde = { version = "1.0.197", features = ["derive"] }

# Debug
log = { version = "0.4.21", optional = true }
simple_logger = { version = "4.3.3", optional = true }

[features]
default = []
server = [ 
    "axum", "dioxus-fullstack/axum", "log", "simple_logger",
    "tokio"
]
web = [
    "dioxus-web"
]
