[package]
name = "dx-spawn-test"
version = "0.1.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
