[package]
name = "fsrs-dioxus-axum-pgdb-lazy-init"
description = "A fullstack Rust example with Dioxus and Axum using Postgres initialized as lazy."
version = "0.1.0"
authors = ["dxps <marius.ileana@gmail.com>"]
edition = "2021"


[dependencies]

axum = { version = "0.7.5", optional = true }
axum-macros = { version = "0.4.1", optional = true }

dioxus = { version = "0.5.1", features = ["fullstack", "router"] }
dioxus-fullstack = { version = "0.5.2" }

lazy_static = { version = "1.4.0", optional = true }
once_cell = "~1.19.0" # Single assignment cells and lazy values.

serde = { version = "1.0.197", features = ["derive"] }

sqlx = { version = "0.7.0", features = [
    "macros",
    "migrate",
    "postgres",
    "_unstable-all-types",
    "tls-rustls",
    "runtime-tokio",
], optional = true }

tokio = { version = "1.37.0", features = ["full"], optional = true }

tower = { version = "0.4.13", optional = true }
tower-http = { version = "0.5.2", features = ["full"], optional = true }

# Logging
log = "0.4.21"
simple_logger = { version = "4.3.3", optional = true }

[features]

default = []
server = [ 
    "axum", "axum-macros", "dioxus-fullstack/axum", "lazy_static", "simple_logger", "sqlx", 
    "tokio", "tower-http" 
]
web = [ "dioxus/web" ]
